index.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

@font-face {
    font-family: 'Averta';
    src: url('fonts/averta.otf') format('opentype');
    font-weight: normal;
}

/* @font-face {
    font-family: 'Averta';
    src: url('fonts/averta-light.otf') format('opentype');
    font-weight: lighter;
} */

body {
    color: #000;
    font-family: 'Averta', sans-serif;
    font-size: 14px;
    letter-spacing: normal;
    line-height: normal;
    text-align: left;
    -webkit-font-smoothing: antialiased;
}

img {
    vertical-align: middle;
}

.brief-grid-col .-left {
    padding: 0 0 30px 0;
}

.brief-header {
    padding: 7px 0 0 0;
}

.brief-text {
    font-size: 20px;
    line-height: 155%;
    letter-spacing: 0.00464286em;
}

.hero {
    position: relative;
    height: 55vh;
    min-height: 300px;
    z-index: 1;
}

.hero-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 100%;
    -webkit-box-pack: center;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
}

.hero-container,
.brief-container {
    padding: 0 20px;
}

.hero-text {
    font-size: 28px;
    letter-spacing: -0.05em;
    line-height: 100%;
}

.hero-text h2 {
    display: block;
    margin: 0;
    padding: 0;
    font-size: inherit;
    letter-spacing: inherit;
    line-height: inherit;
    font-weight: inherit;
}

.hero-text-header {
    margin: 0 0 15px 0;
}

h1 {
    margin: 0;
    padding: 0;
}

.hero-text-header h1 {
    font-size: 17px;
    font-weight: 400;
    line-height: 294%;
}

@media (min-width: 360px) {
    .hero-container,
    .brief-container {
        padding: 0 30px;
    }
    .hero-text {
        font-size: 34px;
    }
    .hero {
        min-height: 356px;
    }
}

@media (min-width: 768px) {
    .hero-container,
    .brief-container {
        padding: 0 100px;
    }
    .hero {
        height: 85vh;
        min-height: 470px;
    }
    .hero-text-header {
        margin: 0 0 18px 0;
    }

    .hero-text-header h1 {
        font-size: 20px;
        line-height: 250%;
    }
    .brief-grid-col .-left {
        min-width: 190px;
        max-width: 190px;
        padding: 0 20px 0 0;
    }
    .brief-text {
        font-size: 22px;
        line-height: 150%;
        letter-spacing: normal;
    }
    .brief-grid {
        display: flex;
    }
}

@media (min-width: 1024px) {
    .hero-container,
    .brief-container {
        padding: 0 120px;
    }
    .brief-grid-col.-left {
        min-width: 300px;
        max-width: 300px;
        padding: 0 80px 0 0;
    }
}

@media (min-width: 1200px) {
    .hero-container,
    .brief-container {
        padding: 0 150px;
    }
    .hero-text {
        font-size: 5.41667vw;
    }
    .brief-text {
        max-width: 92%;
        font-size: 28px;
        line-height: 150%;
    }
}

@media (min-width: 1350px) {
    .hero-container,
    .brief-container {
        padding: 0 180px;
    }
}

@media (min-width: 1600px) {
    .brief-grid-col.-left {
        min-width: 400px;
        max-width: 300px;
    }
}

@media (min-width: 1900px) {
    .hero-container,
    .brief-container {
        padding: 0 270px;
    }
}

#container {
    height: 100vh;
    width: 100vw;
    position: fixed;
    z-index: -1;
    top: 0;
    left: 0;
}

section {
    display: block;
}

.screenshot-container {
    position: relative;

    padding-bottom: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}
@media (min-width: 768px) {
    .screenshot-container {
        padding-bottom: 56.25%;
    }
}

.brief-content {
    padding: 120px 0;
}

@media (min-width: 360px) {
    .brief-content {
        padding: 170px 0;
    }
}

@media (min-width: 768px) {
    .brief-content {
        padding: 300px 0;
    }
}

